--- a/News-Tracker-App/src/main/resources/templates/index.html
+++ b/News-Tracker-App/src/main/resources/templates/index.html
@@ -88,8 +88,8 @@
 			</ul>
 
 			<div class="col-md-3 text-end">
-				<button type="button" class="btn btn-outline-primary me-2">Login</button>
-				<button type="button" class="btn btn-primary">Sign-up</button>
+				<a th:href="@{/login}" class="btn btn-outline-primary me-2" role="button">Login</a>
+				<a th:href="@{/registration}" class="btn btn-primary" role="button">Sign-up</a>
 			</div>
 		</header>
 	</div>
