--- a/News-Tracker-App/src/main/resources/templates/outputChart.html
+++ b/News-Tracker-App/src/main/resources/templates/outputChart.html
@@ -8,16 +8,10 @@
 	crossorigin="anonymous">
 <link href="/css/styles.css" rel="stylesheet" />
 <link href="/css/style.css" rel="stylesheet" />
-
-<script>
-	function jsfunction(){
-	var name = $('#inputId option:selected').text();
-	localStorage.setItem("name", name);
-	}
-</script>
-
+<script type = "text/javascript" src="/js/select.js"></script>
 </head>
-<body>
+
+<body onload="setName()">
 	<div class="header">
 		<div th:replace="fragments/header :: header"></div>
 	</div>
@@ -26,19 +20,13 @@
 	<div th:replace="fragments/sidebar :: sidebar"></div>
 	</sidebar>
 	<div class="container">
-		<script th:inline="javascript">
-			var someVarName = localStorage.getItem("name");
-			document.getElementById('outputName').textContent=someVarName;		
-		</script>
-
-		<h2 align="center">Output Data Graph</h2>
-		<h4 id="outputName" align="center"></h4>
+		<h4 id="name" align="center"></h4>
 
 		<div id="container"
 			style="width: 1080px; height: 600px; margin: 0 auto"></div>
 
-		<select class="form-control" id="outputId" name="outputId"
-			onchange="if(this.value) window.location.href=this.value;jsfunction()">
+		<select class="form-control" id="memberId" name="memberId"
+			onchange="window.location.href=this.value;getName()">
 			<option value="0" selected disabled>Select Output</option>
 			<option th:each="output : ${outputList}" th:value="${output.id}"
 				th:text="${output.firstName+' '+output.lastName}">
@@ -62,7 +50,7 @@
             type: 'column'
         },
         title: {
-            text: 'Organization'
+            text: 'Output Data Graph'
         },
         xAxis: {
             categories: [[${days}]],
