--- a/News-Tracker-App/src/main/resources/static/css/style.css
+++ b/News-Tracker-App/src/main/resources/static/css/style.css
@@ -1,13 +1,21 @@
-#sidebar{
-	width:15%!important;
-	height: 92%;
+#sidebar {
+	width: 15% !important;
+	padding-top: 35px;
+	height: 100%;
 	position: fixed;
 }
 
-.content{
+.content {
 	margin-left: 15%;
+	padding-top: 3%;
 }
 
-#footer{
+#body {
+	padding-top: 4%;
+	margin-left: 16%;
+	margin-right: 1%;
+}
+
+#footer {
 	margin-left: 15%;
 }
