--- a/News-Tracker-App/src/main/resources/templates/add_member.html
+++ b/News-Tracker-App/src/main/resources/templates/add_member.html
@@ -1,64 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<title>Add Team Member</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-	<link href="/css/styles.css" rel="stylesheet" />
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <title>Add Team Member</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+	integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+	crossorigin="anonymous">
+<link href="/css/styles.css" rel="stylesheet" />
 <link href="/css/style.css" rel="stylesheet" />
-</head>
-
-<body>
-	<div class="header">
-		<div th:replace="fragments/header :: header"></div>
-	</div>
-
-	<sidebar class="sidebar">
-	<div th:replace="fragments/sidebar :: sidebar"></div>
-	</sidebar>
-	<div class="container mt-3">
-		<!--success message-->
-		<div th:if="${param.success}">
-			<div class="alert alert-info">You have successfully registered the member</div>
-		</div>
-		<h2>Add a Team Member</h2>
-		<p>Add the following details of team member</p>
-
-		<!-- Multiple inputs -->
-		<form th:action="@{/admin/team/save}" method="post" th:object="${teamMember}">
-		<form class="row g-3">
-			<div class="col-md-6">
-				<div class="row g-3">
-					<input type="hidden" name="id" th:field="*{id}">
-					<input type="text" class="form-control" th:field="*{firstName}" placeholder="First name" aria-label="First name">
-					<input type="text" class="form-control" th:field="*{lastName}" placeholder="Last name" aria-label="Last name">
-					<select class="form-control" id="teamId" th:field="*{team}">
-						<option value="0">Select Team</option>
-						<option value="1">Input</option>
-						<option value="2">Output</option>
-					</select>
-				</div>
-			</div>
-			<br>
-			<div class="col-12">
-				<button type="submit" class="btn btn-primary">Submit</button>
-			</div>
-		</form>
-	</div>
-	<script src="https://code.jquery.com/jquery-3.6.1.min.js"
-		integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+  </head>
+  <body>
+    <div class="header">
+      <div th:replace="fragments/header :: header"></div>
+    </div>
+    <sidebar class="sidebar">
+      <div th:replace="fragments/sidebar :: sidebar"></div>
+    </sidebar>
+    <div id="body" class="container">
+      <!--success message-->
+      <div th:if="${param.success}">
+        <div class="alert alert-info">You have successfully registered the member</div>
+      </div>
+      <h2>Add a Team Member</h2>
+      <p>Add the following details of team member</p>
+      <!-- Multiple inputs -->
+      <form th:action="@{/admin/team/save}" method="post" th:object="${teamMember}">
+        <form class="row g-3">
+          <div class="col-md-6">
+            <div class="row g-3">
+              <input type="hidden" name="id" th:field="*{id}">
+              <input type="text" class="form-control" th:field="*{firstName}" required="required" pattern="\D*" title="Only Texts are allowed" placeholder="First name" aria-label="First name">
+              <input type="text" class="form-control" th:field="*{lastName}" required="required" pattern="\D*" title="Only Texts are allowed" placeholder="Last name" aria-label="Last name">
+              <select class="form-control" id="teamId" th:field="*{team}">
+                <option value="0" selected disabled>Select Team</option>
+                <option value="1" required="required">Input</option>
+                <option value="2" required="required">Output</option>
+              </select>
+            </div>
+          </div>
+          <br>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+		integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
 		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+		
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+		integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+		crossorigin="anonymous"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
 		integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
 		crossorigin="anonymous"></script>
-	<script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js"
-		crossorigin="anonymous"></script>
-</body>
-
+	<script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+  </body>
 </html>
