--- a/News-Tracker-App/src/main/resources/templates/news.html
+++ b/News-Tracker-App/src/main/resources/templates/news.html
@@ -9,7 +9,7 @@
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
 	integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
 	crossorigin="anonymous">
 <link
@@ -30,8 +30,8 @@
 	<sidebar class="sidebar">
 	<div th:replace="fragments/sidebar :: sidebar"></div>
 	</sidebar>
-	
-	<div align="center" class="container">
+
+	<div id="body" align="center">
 		<h1>News List</h1>
 		<a th:href="@{/admin/news/add}" class="btn btn-success">Add a News
 			Item</a> <br> <br>
@@ -67,9 +67,12 @@
 							<td th:text="${news.format}">Larry</td>
 							<td th:text="${news.district}">Larry</td>
 							<td th:text="${news.state}">Larry</td>
-							<td th:text="${news.reporter.firstName+' '+news.reporter.lastName}">Larry</td>
-							<td th:text="${news?.input?.firstName+' '+news?.input?.lastName} ?: '--'"></td> 
-							<td th:text="${news?.output?.firstName+' '+news?.output?.lastName} ?: '--'"></td>
+							<td
+								th:text="${news.reporter.firstName+' '+news.reporter.lastName}">Larry</td>
+							<td
+								th:text="${news?.input?.firstName+' '+news?.input?.lastName} ?: '--'"></td>
+							<td
+								th:text="${news?.output?.firstName+' '+news?.output?.lastName} ?: '--'"></td>
 							<td th:text="${news.priority}">Larry</td>
 							<td th:text="${news.status}">Larry</td>
 							<td th:text="${news.remarks}">Larry</td>
@@ -84,21 +87,26 @@
 			</div>
 		</div>
 	</div>
-<script src="https://code.jquery.com/jquery-3.6.1.min.js"
-		integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+		integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
 		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+		
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+		integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+		crossorigin="anonymous"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
 		integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
 		crossorigin="anonymous"></script>
-	<script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js"
-		crossorigin="anonymous"></script>
+	<script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
 
 	<script>
 		$(document).ready(function () {
-			$('#newsTable').DataTable();
+			$('#newsTable').DataTable({
+				 order: [11, 'desc'],
+			});
 		});
 	</script>
 </body>
