--- a/News-Tracker-App/src/main/resources/templates/index.html
+++ b/News-Tracker-App/src/main/resources/templates/index.html
@@ -97,7 +97,7 @@
 	<section class="section-one">
 		<div class="container">
 			<h1>News Tracker App</h1>
-			<p>Coming Soon</p>
+			<p>one stop solution to manage the flow of news item</p>
 		</div>
 	</section>
 
