--- a/News-Tracker-App/src/main/resources/templates/report/reporterChart.html
+++ b/News-Tracker-App/src/main/resources/templates/report/reporterChart.html
@@ -17,10 +17,10 @@
 	</div>
 
 	<sidebar class="sidebar">
-	<div th:replace="fragments/sidebar :: sidebar"></div>
+		<div th:replace="fragments/sidebar :: sidebar"></div>
 	</sidebar>
 	<div id="body" class="container">
-		<h4 id="name" align="center"></h4>>
+		<h4 id="name" align="center"></h4>
 		<div id="container"
 			style="width: 1080px; height: 600px; margin: 0 auto">
 		</div>
