--- a/News-Tracker-App/src/main/resources/templates/fragments/header.html
+++ b/News-Tracker-App/src/main/resources/templates/fragments/header.html
@@ -17,7 +17,7 @@
 			<!-- Navbar Brand-->
 			<a class="navbar-brand ps-3" href="/">Admin Panel</a>
 			<!-- Navbar Search-->
-			<form
+			<!-- <form
 				class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
 				<div class="input-group">
 					<input class="form-control" type="text" placeholder="Search for..."
@@ -26,17 +26,16 @@
 						<i class="fas fa-search"></i>
 					</button>
 				</div>
-			</form>
+			</form> -->
 			<!-- Navbar-->
-			<ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+			<ul class="navbar-nav d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
 				<li class="nav-item dropdown"><a
 					class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
 					role="button" data-bs-toggle="dropdown" aria-expanded="false"><i
 						class="fas fa-user fa-fw"></i></a>
 					<ul class="dropdown-menu dropdown-menu-end"
 						aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item" href="#!">Settings</a></li>
-						<li><a class="dropdown-item" href="#!">Activity Log</a></li>
+						<li><a class="dropdown-item" th:href="@{/actuator/logfile}">Activity Log</a></li>
 						<li><hr class="dropdown-divider" /></li>
 						<li><a class="dropdown-item" th:href="@{/logout}">Logout</a></li>
 					</ul></li>
