--- a/News-Tracker-App/src/main/resources/templates/access/login.html
+++ b/News-Tracker-App/src/main/resources/templates/access/login.html
@@ -57,7 +57,9 @@
             <span class="input-group-addon">
               <i class="fa fa-user"></i>
             </span>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Username" required="required" autofocus="autofocus">
+            <input type="text" class="form-control" id="username" name="username"
+                   value="admin@gmail.com" required="required"
+                   autofocus="autofocus">
           </div>
         </div>
         <div class="form-group">
@@ -65,7 +67,7 @@
             <span class="input-group-addon">
               <i class="fa fa-lock"></i>
             </span>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password" required="required" autofocus="autofocus">
+            <input type="password" class="form-control" id="password" name="password" value="admin" required="required" autofocus="autofocus">
           </div>
         </div>
         <div class="form-group">
