docker cicd updated

--- a/News-Tracker-App/src/main/resources/templates/index.html
+++ b/News-Tracker-App/src/main/resources/templates/index.html
@@ -213,7 +213,7 @@
 </section>
 <footer class="footer mt-auto py-3 bg-light">
 	<div class="container">
-		<span class="text-muted">© Copyright News Tracker App 2024 created by Alok Gupta</span>
+		<span class="text-muted">© Copyright 2024 News Tracker App - created by Alok Gupta</span>
 	</div>
 </footer>
 <!-- Optional JavaScript -->
